--- a/python/python_basics.ipynb
+++ b/python/python_basics.ipynb
@@ -6,7 +6,9 @@
       "provenance": [],
       "collapsed_sections": [
         "7y5xZ2RbSzfe"
-      ]
+      ],
+      "authorship_tag": "ABX9TyPEm1igsa7cz4IF4Mf3PuZJ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,12 +21,13 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# New Section"
-      ],
       "metadata": {
-        "id": "7y5xZ2RbSzfe"
-      }
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aiswaryajoseph2004-bot/python/blob/main/python/python_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "code",
@@ -13470,10 +13473,119 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Regular Expressions(regex)"
+      ],
+      "metadata": {
+        "id": "wiga6nqrniwa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "text=\"my number is 123-456-7890.\"\n",
+        "match=re.search(r\"\\d{3}-\\d{3}-\\d{4}\",text)\n",
+        "if match:\n",
+        "  print(\"found:\",match.group())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xIh7AJC5nzgM",
+        "outputId": "961e31e0-ec41-4361-f983-e175d370cd7e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "found: 123-456-7890\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "text=\"order 123 costs $45\"\n",
+        "print(re.findall(r'\\d+',text))"
+      ],
+      "metadata": {
+        "id": "O7XaxcSPofrs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "40c3464c-1c7e-4caa-d6b5-e6836ffe019a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['123', '45']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Pattern= r'^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$'\n",
+        "print(bool(re.match(Pattern,\"test@example.com\")))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_iSLbOMewpmH",
+        "outputId": "7e4f2fb7-f9be-4791-deee-e23d71a96369"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text=\"I love cats and dogs\"\n",
+        "print(re.sub(r'cats|dogs','animals',text))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3_nrh9C1x_Hn",
+        "outputId": "02072837-e1e2-49d6-fe71-8b8910487f89"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I love animals and animals\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LFiJKKWy9N8b"
+        "id": "Cq_i0PYVygjF"
       },
       "execution_count": null,
       "outputs": []
